compiler/driver/tests/snapshots/codegen_snapshots__snap_array_sort.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "arm64-apple-darwin"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @array_i32_sort_copy(i32*, i32*, i32)
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %alloca.N = alloca [5 x i32]
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 0
  store i32 10, i32* %gep.N
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 1
  store i32 1, i32* %gep.N
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 2
  store i32 2, i32* %gep.N
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 3
  store i32 8, i32* %gep.N
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 4
  store i32 5, i32* %gep.N
  %alloca.N = alloca [5 x i32]
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 0
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 0
  call void @array_i32_sort_copy(i32* %gep.N, i32* %gep.N, i32 5)
  %alloca.N = alloca i32
  store i32 0, i32* %alloca.N
  %alloca.N = alloca i32
  br label %for.cond.N
for.cond.N:
  %load.N = load i32, i32* %alloca.N
  %cmp.N = icmp slt i32 %load.N, 5
  br i1 %cmp.N, label %for.body.N, label %for.end.N
for.body.N:
  %gep.N = getelementptr inbounds [5 x i32], [5 x i32]* %alloca.N, i32 0, i32 %load.N
  %load.N = load i32, i32* %gep.N
  store i32 %load.N, i32* %alloca.N
  %ld.N = load i32, i32* %alloca.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %ld.N)
  %inc.N = add i32 %load.N, 1
  store i32 %inc.N, i32* %alloca.N
  br label %for.cond.N
for.end.N:
  ret i32 0
}
